--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
