--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
