--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "semantic-ui-react": "^2.1.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
