--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
