--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.9.1",
     "babel-loader": "^9.1.0",
+    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
+    "install": "^0.13.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^4.3.1",
-    "react-toastify": "^9.1.1",
+    "react-router-dom": "^5.3.0",
+    "react-toastify": "^7.0.4",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
