--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -41,6 +42,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "semantic-ui-react": "^2.1.4",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
