--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.4",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
