--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
